# joplin-mcp-server

./: .env.example  .gitignore  .woodpecker.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.forgejo/workflows/: ci.yml
joplin-cli/: Dockerfile  entrypoint.sh
src/joplin/: joplin_api.py
src/mcp/: joplin_mcp.py
src/utils/: summarizer.py
test/: test_summarizer.py
test/integration/: .env.example  README.md  diagnose_notebooks.py  setup_local_cli.sh
